objects/gvp__POS_Material__c.object
<CustomObject>
    <description>Point of sale material.</description>
    <fields>
        <fullName>GVP_Available__c</fullName>
        <formula>GVP_Total_Quantity__c - GVP_Placed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GVP_Brand_Carrier__c</fullName>
        <label>Brand-Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Multi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GVP_Creativity_Cost__c</fullName>
        <label>Creativity Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GVP_Life_Expectancy__c</fullName>
        <label>Life Expectancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GVP_Placed__c</fullName>
        <label>Placed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GVP_Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>gvp__Territory__c</referenceTo>
        <relationshipLabel>POS Materials</relationshipLabel>
        <relationshipName>POS_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GVP_Reposition_Cost__c</fullName>
        <label>Reposition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GVP_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GVP_Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GVP_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>On Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>gvp__Brand__c</referenceTo>
        <relationshipLabel>POS Materials</relationshipLabel>
        <relationshipName>POS_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Current_Inventory__c</fullName>
        <formula>gvp__Total_Produced__c - gvp__Total_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Inventory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_1__c</fullName>
        <label>Custom 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_2__c</fullName>
        <label>Custom 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_3__c</fullName>
        <label>Custom 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Checkbox_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Checkbox 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Checkbox_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Checkbox 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Currency_1__c</fullName>
        <label>Custom Currency 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Currency_2__c</fullName>
        <label>Custom Currency 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Fact_1__c</fullName>
        <label>Custom Fact 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Fact_2__c</fullName>
        <label>Custom Fact 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Picklist_1__c</fullName>
        <label>Custom Picklist 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_Picklist_2__c</fullName>
        <label>Custom Picklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_Picklist_3__c</fullName>
        <label>Custom Picklist 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Date_available__c</fullName>
        <label>Date available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Estimated_Cost_per_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estimated Cost per Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Label</label>
        <referenceTo>gvp__Label__c</referenceTo>
        <relationshipName>POS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__POS_Image__c</fullName>
        <formula>IMAGE(&quot;https://na6.salesforce.com/services/SRedirect?u=%2Fservlet%2Fservlet.FileDownload%3Ffile%3D01580000000seX9&amp;retURL=%2F015%3Ffcf%3D00580000001slAi&quot;,&quot;Display Bin&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POS Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__POS_Key__c</fullName>
        <externalId>true</externalId>
        <label>POS Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Photo__c</fullName>
        <label>Photo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>gvp__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Total_Ordered__c</fullName>
        <label>Total Ordered</label>
        <summarizedField>gvp__POS_Order__c.gvp__Quantity_in_Packs__c</summarizedField>
        <summaryForeignKey>gvp__POS_Order__c.gvp__POS_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gvp__Total_Produced__c</fullName>
        <label>Total Produced</label>
        <summarizedField>gvp__POS_Production__c.gvp__Order_Quantity__c</summarizedField>
        <summaryForeignKey>gvp__POS_Production__c.gvp__POS_Material__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gvp__Units_per_pack__c</fullName>
        <label>Units per pack</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POS Material</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <columns>NAME</columns>
        <columns>gvp__Active__c</columns>
        <columns>GVP_Available__c</columns>
        <columns>GVP_Status__c</columns>
        <columns>gvp__Date_available__c</columns>
        <columns>gvp__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>POS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POS Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>